issue #11 fixed overflow

--- a/src/components/elements/buttons/button-register/button-register.scss
+++ b/src/components/elements/buttons/button-register/button-register.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/utils/_main.scss";
 
 .button-register {
-  height: 2.125rem;
+  min-height: 2.125rem;
   border-radius: 1.375rem;
   border: none;
   text-transform: uppercase;
