--- a/src/components/mixins-pages/landing/landing.scss
+++ b/src/components/mixins-pages/landing/landing.scss
@@ -25,7 +25,7 @@ body {
     text-align: right;
     color: $shade75;
     right: 21.5%;
-    top: 47.55rem;
+    bottom: 1.3rem;
     position: absolute;
   }
 }
